# aie-group-Tereshin-BFBO-03-24

./: README.md
homeworks/HW01/: HW01.ipynb
homeworks/HW02/: HW02_pd&plt.ipynb
homeworks/HW03/eda-cli/: pyproject.toml
homeworks/HW03/eda-cli/reports_example/: report.md
homeworks/HW03/eda-cli/src/eda_cli/: cli.py  core.py
homeworks/HW04/eda-cli/reports_example/: report.md
homeworks/HW04/eda-cli/src/eda_cli/: api.py
homeworks/HW04/eda-cli/tests/: test_core.py
homeworks/HW05/: HW05.ipynb
homeworks/HW06/: HW06.ipynb  report.md
homeworks/HW06/artifacts/: best_model.joblib  best_model_meta.json  metrics_test.json  search_summaries.json
