[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "s03"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pytest>=9.0.1",
    "typer>=0.20.0",
]

[tool.setuptools]
packages = ["eda_cli"]

[tool.setuptools.package-dir]
"" = "src"

[project.scripts]
eda-cli = "eda_cli.cli:app"
